--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 /*================General===============================*/
 
 body {
+   user-select: none;
    font-family: Fira Sans;
    font-style: normal;
 }
@@ -47,9 +48,9 @@ body {
    font-size: 80px;
    line-height: 195%;
    text-transform: uppercase;
-   color: #f70707de;
+   color: #ffffff00;
    position: relative;
-   z-index: 2;
+   z-index: 20;
    &::before {
       content: "";
       background: #4AF6CD;
@@ -58,6 +59,12 @@ body {
       position: absolute;
       top: 30px;
       right: 0;
+      animation: title 5s ease-in-out 0s infinite;
+      @keyframes title {
+         0% {width: 80px;}
+         50% {width: 40px;}
+         100% {width: 80px;}
+      }
    }
    & span {
       position: absolute;
@@ -68,7 +75,7 @@ body {
       line-height: 195%;
       text-transform: uppercase;
       color: #FFFFFF;
-      z-index: 3;
+      z-index: 30;
    }
    & p {
       position: absolute;
@@ -76,7 +83,7 @@ body {
       top: 70px;
       right: 0;
       color: rgba(41, 41, 41, 0.185);
-      z-index: 1;
+      z-index: 10;
    }
    @media (max-width: 1025px) {
       font-size: 60px;
@@ -134,6 +141,7 @@ body {
    line-height: 215%;
    text-transform: uppercase;
    color: #FFFFFF;
+   animation: small-title 10s ease-in-out 0s infinite;
    @media (max-width: 1025px) {
       font-size: 30px;
    }
@@ -203,6 +211,12 @@ body {
    text-transform: none;
    text-decoration: underline;
    text-shadow: 3px 3px 10px #4AF6CD;
+   animation: airline-name 5s ease 0s infinite;
+   @keyframes airline-name {
+      0% {text-shadow: 3px 3px 5px #4AF6CD; }
+      50% { text-shadow: 0px 0px 10px #4AF6CD; }
+      100% {text-shadow: 3px 3px 5px #4AF6CD;}
+   }
 }
 
 .resort-stars {
@@ -210,11 +224,17 @@ body {
    color: #4AF6CD;
    text-transform: none;
    text-shadow: 0px 0px 15px #4AF6CD;
+   animation: stars 5s ease 0s infinite;
+   @keyframes stars {
+      0% { text-shadow: 0px 0px 10px #4AF6CD;}
+      50% {text-shadow: 0px 0px 15px #4AF6CD;}
+      100% {text-shadow: 0px 0px 10px #4AF6CD;}
+   }
 }
 
 .button {
    display: flex;
-
+   transition: all 0.2s ease-in-out;
    &__btn-left {
       padding: 9% 9% 9% 0;
       position: relative;
@@ -257,6 +277,9 @@ body {
    }
 
    &__btn-arrow {
+   }
+   &:hover {
+      transform: scale(1.1);
    }
 }
 
@@ -340,6 +363,7 @@ body {
 
    &__slides-info {
       display: flex;
+      transition: all 0.2s ease-in-out;
    }
 
    &__places {
@@ -367,6 +391,11 @@ body {
       justify-content: end;
       margin: 0px 0px 40px 0px;
       cursor: pointer;
+      transform: rotate(-180deg);
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: rotate(-180deg) scale(1.1);
+      }
    }
 
    &__slider-location {
@@ -413,7 +442,11 @@ body {
       }
    }
 
-   &__logo-link {}
+   &__logo-link {
+   &:hover {
+         transform: scale(1.1);
+      }
+   }
 
    &__part {
       font-weight: 800;
@@ -436,7 +469,7 @@ body {
    }
 
    &__part-1 {
-      background-color: #4AF6CD;;
+      background-color: #4AF6CD;
       width: 100%;
       height: 180px;
       display: flex;
@@ -488,6 +521,7 @@ body {
    }
 
    &__menu {
+      transition: all 0.2s ease-in-out;
       @media (max-width: 769px) {
          flex: 1 1 auto;
          display: flex;
@@ -538,7 +572,7 @@ body {
    }
 
    &__burger-menu {
-      display: none;
+      opacity: 0;
       @media (max-width: 769px) {
          display: contents;
          margin: 0px 0px 25px 0px;
@@ -569,6 +603,7 @@ body {
       &::after,
       &::before {
          content: "";
+         transition: all 0.2s ease-in-out;
       }
       &::after {
          top: 0;
@@ -591,14 +626,17 @@ body {
    &__hide-menu-active {
       span {
          transform: scale(0);
+         
       }
       &::after {
          top: 50%;
          transform: translate(0px, -50%) rotate(-45deg);
+         transition: all 0.2s ease-in-out;
       }
       &::before {
          bottom: 50%;
          transform: translate(0px, 50%) rotate(45deg);
+         transition: all 0.2s ease-in-out;
       }
    }
 
@@ -607,6 +645,7 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      transition: all 0.2s ease-in-out;
       &:not(:last-child) {
          margin: 0px 0px 37px 0px;
          @media (max-width: 1025px) {
@@ -616,7 +655,10 @@ body {
             margin: 0px 0px 10px 0px;
          }
       }
-      
+      &:hover{
+         transform: scale(1.1);
+         text-shadow: 0px 0px 5px #4AF6CD;
+      }
    }
 
    &__search {
@@ -635,7 +677,11 @@ body {
    }
 
    &__search-icon {
+      transition: all 0.2s ease-in-out;
       cursor: pointer;
+      &:hover {
+         transform: scale(1.1);
+      }
    }
 
    &__search-field {
@@ -691,11 +737,16 @@ body {
       justify-content: center;
       align-items: center;
       padding: 0px 5px;
+      transition: all 0.2s ease-in-out;
       @media (max-width: 769px) {
          flex-direction: column;
       }
       @media (max-width: 540px) {
          position: relative;
+      }
+      &:hover {
+         transform: scale(1.1);
+         text-shadow: 0px 0px 5px #4AF6CD;
       }
    }
 }
@@ -840,6 +891,22 @@ body {
       @media (max-width: 540px) {
          flex: 1 1 auto;
       }
+      animation-name: arrow;
+      animation-duration: 2s;
+      animation-direction: alternate;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+      @keyframes arrow {
+         0% {
+            transform: translate(0px, 0px);
+         }
+         50% {
+            transform: translate(0px, 10px);
+         }
+         100% {
+            transform: translate(0px, 0px);
+         }
+      }
    }
    
    &__arrow-img {}
@@ -847,6 +914,7 @@ body {
    &__columns {
       flex: 1 1 auto;
       display: flex;
+      flex-direction: row-reverse;
       justify-content: end;
       align-items: center;
       @media (max-width: 661px) {
@@ -856,7 +924,6 @@ body {
       @media (max-width: 540px) {
          flex-wrap: wrap;
          justify-content: end;
-         
          flex: 0 0;
       }
    }
@@ -869,21 +936,21 @@ body {
       display: flex;
       justify-content: space-between;
       width: 100%;
-      &:not(:last-child) {
+      &:not(:first-child) {
          margin: 0px 40px 0px 0px;
       }
       @media (max-width: 1025px) {
-         &:not(:last-child) {
+         &:not(:first-child) {
             margin: 0px 30px 0px 0px;
          }
       }
       @media (max-width: 769px) {
-         &:not(:last-child) {
+         &:not(:first-child) {
             margin: 0px 20px 0px 0px;
          }
       }
       @media (max-width: 661px) {
-         &:not(:last-child) {
+         &:not(:first-child) {
             margin: 0px 5px 10px 5px;
          }
          flex: 1 1 50%;
@@ -952,7 +1019,9 @@ body {
 
    &__maps-slide {
       display: flex;
+      flex-direction: row-reverse;
       width: 100%;
+      transition: all 0.2s ease-in-out;
       img {
          width: 100%;
       }
@@ -996,14 +1065,21 @@ body {
    &__arrow-left {
       cursor: pointer;
       margin: 0px 20px 0px 0px;
-
       img {
          transform: rotate(-180deg);
+      }
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: scale(1.1);
       }
    }
 
       &__arrow-right {
          cursor: pointer;
+         transition: all 0.2s ease-in-out;
+         &:hover {
+               transform: scale(1.1);
+            }
       }
 }
 
@@ -1173,6 +1249,7 @@ body {
       margin: 0px 0px 10px 0px;
       position: relative;
       opacity: 0;
+      transition: all 0.5s ease-in-out;
       @media (max-width: 1125px) {
          padding: 20px;
       }
@@ -1219,6 +1296,7 @@ body {
       height: 24px;
       border-radius: 50%;
       background-color: #4af6ce42;
+      transition: all 0.5s ease-in-out;
       @media (max-width: 1025px) {
          width: 18px;
          height: 18px;
@@ -1448,7 +1526,6 @@ body {
 
    &__slider {
       position: relative;
-      
    }
 
    &__line {
@@ -1468,6 +1545,7 @@ body {
 
    &__image {
       img {
+         border-radius: 3px;
          width: 100%;
       }
    }
@@ -1482,6 +1560,7 @@ body {
    }
 
    &__cover-active{
+      transition: all 0.5s ease-in-out;
       background-color: #0000002f;
    }
 
@@ -1520,7 +1599,7 @@ body {
       color: #FFFFFF;
       white-space: nowrap;
       transform-origin: 0px 0px;
-      transform: translate(10%, 80%) rotate(-90deg);
+      transform: translate(15%, 80%) rotate(-90deg);
       padding: 5px;
       @media (max-width: 1025px) {
          font-size: 16px;
@@ -1555,6 +1634,10 @@ body {
    &__right-arrow {
       padding: 10px;
       margin: 0px 20px 0px 0px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: scale(1.1);
+      }
    }
 }
 #beach-1 {
@@ -1694,11 +1777,19 @@ body {
       cursor: pointer;
       padding: 10px;
       transform: rotate(-180deg);
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: rotate(-180deg) scale(1.1);
+      }
    }
 
    &__arrow-right {
       cursor: pointer;
       padding: 10px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: scale(1.1);
+      }
       
    }
 
@@ -1706,10 +1797,15 @@ body {
       display: flex;
       flex-direction: column;
       opacity: 0;
+      position: relative;
+      transition: all 0.2s ease-in-out;
+      
    }
 
    &__main-content-active {
+      transition: all 0.2s ease-in-out;
       opacity: 1;
+      z-index: 10;
    }
 
    &__main-content-abs {
@@ -2110,11 +2206,19 @@ body {
       cursor: pointer;
       transform: rotate(-180deg);
       padding: 10px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: rotate(-180deg) scale(1.1);
+      }
    }
 
    &__arrow-right {
       cursor: pointer;
       padding: 10px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: scale(1.1);
+      }
    }
 
    &__main-content {
@@ -2122,11 +2226,13 @@ body {
       flex-direction: column;
       opacity: 0;
       position: relative;
+      transition: all 0.2s ease-in-out;
    }
 
    &__main-content-active {
       opacity: 1;
       z-index: 10;
+      transition: all 0.2s ease-in-out;
    }
 
    &__main-content-abs {
@@ -2612,22 +2718,32 @@ body {
       cursor: pointer;
       transform: rotate(-180deg);
       padding: 10px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: rotate(-180deg) scale(1.1);
+      }
    }
 
    &__arrow-right {
       cursor: pointer;
       padding: 10px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+         transform: scale(1.1);
+      }
    }
 
    &__main-content {
       opacity: 0;
       position: relative;
       z-index: 4;
+      transition: all 0.2s ease-in-out;
    }
 
    &__main-content-active {
       opacity: 1;
       z-index: 10;
+      transition: all 0.2s ease-in-out;
    }
 
    &__main-content-abs {
@@ -2881,6 +2997,12 @@ body {
       }
    }
 
+   &__pointer-active {
+      &::before {
+         content: none;
+      }
+   }
+
    #shape {
       top: 30%;
       left: 70%;
@@ -2904,6 +3026,7 @@ body {
       text-transform: uppercase;
       color: #FFFFFF;
       padding: 0px 0px 0px 80px;
+      transition: all 0.3s ease-in-out;
       &::before {
          content: "";
          background: #FFFFFF;
